force-app/main/default/objects/AiAgentInteraction__dll/fields/attributeText__c.field-meta.xml
<CustomField>
    <fullName>attributeText__c</fullName>
    <label>attributeText</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>attributeText</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>