force-app/main/default/objects/AiAgentInteraction__dll/fields/endTimestamp__c.field-meta.xml
<CustomField>
    <fullName>endTimestamp__c</fullName>
    <label>endTimestamp</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>endTimestamp</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>