force-app/main/default/objects/AiAgentInteraction__dll/fields/prevInteractionId__c.field-meta.xml
<CustomField>
    <fullName>prevInteractionId__c</fullName>
    <label>prevInteractionId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>prevInteractionId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>