force-app/main/default/objects/AiAgentInteraction__dll/fields/telemetryTraceId__c.field-meta.xml
<CustomField>
    <fullName>telemetryTraceId__c</fullName>
    <label>telemetryTraceId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>telemetryTraceId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>